--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=us-cdbr-east-04.cleardb.com
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=heroku_b56a76bc2268856
+DB_USERNAME=b3114c3c744fed
+DB_PASSWORD=c231f9e7
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
